--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -98,7 +98,7 @@
                 <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
                   class="d-table badge bg-primary cursor-point"><h4 class="h6 text-light fs-sm"
                                                                     style="margin-bottom: 0px;"><i
-                  class="fi-star fs-sm"></i> 4.5 / 5</h4></span></div>
+                  class="fi-star fs-sm" style="margin-right: 5px"></i> {{item.rating1 | number:'.1-1'}} / 5.0</h4></span></div>
                 <!--<div class="content-overlay end-0 top-0"-->
                 <!--style="display: flex;justify-content: right;width: 95%;margin-top: 158px;margin-right: 10px">-->
                 <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
@@ -189,13 +189,12 @@
                             {{item.businessProfileCategory.businessProfile.businessName}}
                           </a>
                         </h2>
-                        <div class="star-rating">
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                        </div>
+                        <span class="star-rating">
+                      <i *ngFor="let rating of [].constructor(item.businessProfileCategory.businessProfile.rating2)"
+                         class="star-rating-icon fi-star-filled active"></i>
+                      <i *ngFor="let rating of [].constructor(5-item.businessProfileCategory.businessProfile.rating2)"
+                         class="star-rating-icon fi-star-filled"></i>
+                    </span>
                       </div>
 
                     </div>
@@ -251,7 +250,7 @@
                 <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
                   class="d-table badge bg-primary cursor-point"><h4 class="h6 text-light fs-sm"
                                                                     style="margin-bottom: 0px;"><i
-                  class="fi-star fs-sm"></i> 4.5 / 5</h4></span></div>
+                  class="fi-star fs-sm" style="margin-right: 5px"></i> {{item.rating1 | number:'.1-1'}} / 5.0</h4></span></div>
                 <!--<div class="content-overlay end-0 top-0"-->
                 <!--style="display: flex;justify-content: right;width: 95%;margin-top: 158px;margin-right: 10px">-->
                 <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
@@ -344,13 +343,12 @@
                             {{item.businessProfileCategory.businessProfile.businessName}}
                           </a>
                         </h2>
-                        <div class="star-rating">
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                          <i class="star-rating-icon fi-star-filled active"></i>
-                        </div>
+                        <span class="star-rating">
+                      <i *ngFor="let rating of [].constructor(item.businessProfileCategory.businessProfile.rating2)"
+                         class="star-rating-icon fi-star-filled active"></i>
+                      <i *ngFor="let rating of [].constructor(5-item.businessProfileCategory.businessProfile.rating2)"
+                         class="star-rating-icon fi-star-filled"></i>
+                    </span>
                       </div>
 
                     </div>
