--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -230,7 +230,7 @@
           <!-- Reviews-->
           <div class="mb-4 pb-4 border-bottom">
             <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>
-              4,9 ({{itemPackageReviews.length}} review{{itemPackageReviews.length>1?'s':''}})
+              {{itemPackageReviewR.rating1 | number:'.1-1'}} / 5.0 ({{itemPackageReviewR.itemPackageReviews.length}} review{{itemPackageReviewR.itemPackageReviews.length>1?'s':''}})
             </h3>
             <div
               class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
@@ -291,7 +291,7 @@
             </div>
           </div>
           <!-- Review-->
-          <div class="mb-4 pb-4" *ngFor="let itemPackageReview of itemPackageReviews;let isLast=last;let i=index"
+          <div class="mb-4 pb-4" *ngFor="let itemPackageReview of itemPackageReviewR.itemPackageReviews;let isLast=last;let i=index"
                [ngClass]="!isLast?'border-bottom':''">
             <form #reviewUpdateForm="ngForm"
                   (ngSubmit)="reviewUpdateForm.form.valid && updateItemPackageReview(itemPackageReview,i)" novalidate>
