--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -519,7 +519,7 @@
           <!-- Reviews-->
           <div class="mb-4 pb-4 border-bottom">
             <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>
-              4,9 ({{itemPackageReviews.length}} review{{itemPackageReviews.length>1?'s':''}})
+              {{itemPackageReview.rating}} ({{itemPackageReview.itemPackageReviews.length}} review{{itemPackageReview.itemPackageReviews.length>1?'s':''}})
             </h3>
             <div
               class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
@@ -540,7 +540,7 @@
             </div>
           </div>
           <!-- Review-->
-          <div class="mb-4 pb-4" *ngFor="let itemPackageReview of itemPackageReviews;let isLast=last"
+          <div class="mb-4 pb-4" *ngFor="let itemPackageReview of itemPackageReview.itemPackageReviews;let isLast=last"
                [ngClass]="!isLast?'border-bottom':''">
             <div class="d-flex justify-content-between mb-3">
               <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
