--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
@@ -5,7 +5,8 @@
       <div class="tns-carousel-wrapper card-img-top card-img-hover" style="background-color: rgba(0,0,0,0.25)">
         <a class="img-overlay"></a>
         <div class="position-absolute start-0 top-0 pt-3 ps-3"><span class="d-table badge bg-primary cursor-point"><h4
-          class="h6 text-light fs-sm" style="margin-bottom: 0px;"><i class="fi-star fs-sm"></i> 4.5 / 5</h4></span>
+          class="h6 text-light fs-sm" style="margin-bottom: 0px">
+          <i class="fi-star fs-sm" style="margin-right: 5px"></i> {{item.itemPackage.rating1 | number:'.1-1'}} / 5.0</h4></span>
         </div>
         <!--<div class="content-overlay end-0 top-0 pt-3 pe-3">-->
           <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
