--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -551,6 +551,10 @@
 
             <!-- <a class="img-overlay" href="#"></a> -->
             <span class="img-gradient-overlay"></span>
+            <div class="position-absolute start-0 top-0 pt-3 ps-3"><span class="d-table badge bg-primary cursor-point"><h4
+              class="h6 text-light fs-sm" style="margin-bottom: 0px">
+          <i class="fi-star fs-sm" style="margin-right: 5px"></i> {{packageItem.itemPackage.rating1 | number:'.1-1'}} / 5.0</h4></span>
+            </div>
             <!--<div class="position-absolute start-0 top-0 pt-3 ps-3"><span-->
             <!--class="d-table badge bg-info">{{itemPackage.name}}</span></div>-->
 
