--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-item/ba-manage-package-item.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-item/ba-manage-package-item.component.html
@@ -37,43 +37,43 @@
               </div>
               <div class="valid-tooltip">Looks good!</div>
             </div>
-            <div class="col-md-4 mb-3">
-              <label class="form-label" for="validationTooltip02"
-              >Quantity</label
-              >
-              <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
-                 data-bs-toggle="tooltip" title="Item quantity" data-bs-original-title="Item quantity"
-                 aria-label="Item quantity"><i class="fi-help"></i>
-              </a>
-              <input
-                class="form-control"
-                type="number"
-                placeholder="Quantity"
-                id="validationTooltip02"
-                min="1"
-                required
-                [(ngModel)]="item.itemPackage.quantity" #itemQty="ngModel" name="itemQty"
-              />
-              <div *ngIf="(itemQty.touched || baManageFormItem.submitted) && itemQty.errors?.required"
-                   class="validErr">
-                Quantity is required
-              </div>
-              <div class="valid-tooltip">Looks good!</div>
-            </div>
-            <div class="col-md-3 mb-3" style="margin-top: 46px">
-              <label>
-                Make To Order
-                <input type="checkbox" name="makeToOrder" style="margin-left: 5px; transform: scale(1.4)"
-                       [(ngModel)]="item.itemPackage.makeToOrder">
-              </label>
-            </div>
-            <div class="col-md-3 mb-3" style="margin-top: 46px">
-              <label>
-                Package Only
-                <input type="checkbox" name="packageOnly" style="margin-left: 5px; transform: scale(1.4)"
-                       [(ngModel)]="item.packageOnly">
-              </label>
-            </div>
+            <!--<div class="col-md-4 mb-3">-->
+              <!--<label class="form-label" for="validationTooltip02"-->
+              <!--&gt;Quantity</label-->
+              <!--&gt;-->
+              <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
+                 <!--data-bs-toggle="tooltip" title="Item quantity" data-bs-original-title="Item quantity"-->
+                 <!--aria-label="Item quantity"><i class="fi-help"></i>-->
+              <!--</a>-->
+              <!--<input-->
+                <!--class="form-control"-->
+                <!--type="number"-->
+                <!--placeholder="Quantity"-->
+                <!--id="validationTooltip02"-->
+                <!--min="1"-->
+                <!--required-->
+                <!--[(ngModel)]="item.itemPackage.quantity" #itemQty="ngModel" name="itemQty"-->
+              <!--/>-->
+              <!--&lt;!&ndash;<div *ngIf="(itemQty.touched || baManageFormItem.submitted) && itemQty.errors?.required"&ndash;&gt;-->
+                   <!--&lt;!&ndash;class="validErr">&ndash;&gt;-->
+                <!--&lt;!&ndash;Quantity is required&ndash;&gt;-->
+              <!--&lt;!&ndash;</div>&ndash;&gt;-->
+              <!--&lt;!&ndash;<div class="valid-tooltip">Looks good!</div>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class="col-md-3 mb-3" style="margin-top: 46px">-->
+              <!--<label>-->
+                <!--Make To Order-->
+                <!--<input type="checkbox" name="makeToOrder" style="margin-left: 5px; transform: scale(1.4)"-->
+                       <!--[(ngModel)]="item.itemPackage.makeToOrder">-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="col-md-3 mb-3" style="margin-top: 46px">-->
+              <!--<label>-->
+                <!--Package Only-->
+                <!--<input type="checkbox" name="packageOnly" style="margin-left: 5px; transform: scale(1.4)"-->
+                       <!--[(ngModel)]="item.packageOnly">-->
+              <!--</label>-->
+            <!--</div>-->
             <!-- <div class="col-md-4 mb-3">
                     <label class="form-label" for="validationTooltipUsername">Username</label>
                     <input class="form-control" type="text" id="validationTooltipUsername" placeholder="Username" required>
@@ -81,81 +81,81 @@
                     <div class="valid-tooltip">Looks good!</div>
                   </div> -->
           </div>
-          <div class="row" *ngIf="!item.packageOnly">
-            <div class="col-md-4 mb-3">
-              <label class="form-label" for="validationTooltip03"
-              >Discount type</label
-              >
-              <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
-                 data-bs-toggle="tooltip" title="Select discount type" data-bs-original-title=""
-                 aria-label="Item price"><i class="fi-help"></i>
-              </a>
-              <select
-                class="form-select"
-                id="validationTooltip03"
-                [(ngModel)]="item.itemPackage.discountType" #itemDiscountType="ngModel" name="itemDiscountType"
-              >
-                <option value="None">None</option>
-                <option value="Cash">Cash</option>
-                <option value="Percentage">Percentage</option>
-              </select>
-              <div
-                *ngIf="(itemDiscountType.touched || baManageFormItem.submitted) && itemDiscountType.errors?.required"
-                class="validErr">
-                Discount type is required
-              </div>
-            </div>
-            <div class="col-md-4 mb-3" *ngIf="item.itemPackage.discountType!=='None'">
-              <label class="form-label" for="validationTooltip04"
-              >Discount</label
-              >
-              <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
-                 data-bs-toggle="tooltip" title="Item discount" data-bs-original-title="Item discount"
-                 aria-label="Item discount"><i class="fi-help"></i>
-              </a>
-              <input
-                class="form-control"
-                type="number"
-                id="validationTooltip04"
-                placeholder="Discount"
-                required
-                [(ngModel)]="item.itemPackage.discount" #itemDiscount="ngModel" name="itemDiscount"
-              />
-              <div *ngIf="(itemDiscount.touched || baManageFormItem.submitted) && itemDiscount.errors?.required"
-                   class="validErr">
-                Discount is required
-              </div>
-              <!--<div class="valid-tooltip">Looks good!</div>-->
-            </div>
-            <div class="col-md-4 mb-3">
-              <label class="form-label" for="validationTooltip02"
-              >Price (LKR)</label
-              >
-              <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
-                 data-bs-toggle="tooltip" title="" data-bs-original-title="Item price" aria-label="Item price"><i
-                class="fi-help"></i>
-              </a>
-              <!-- <input
-                class="form-control"
-                type="text"
-                id="validationTooltip02"
-                placeholder="Price"
-                value=""
-                required
-              /> -->
-              <div class="input-group">
-                <span class="input-group-text fs-lg py-1">LKR</span>
-                <input type="number" class="form-control" placeholder="Amount"
-                       required [(ngModel)]="item.itemPackage.price" #itemPrice="ngModel" name="itemPrice">
-                <!--<span class="input-group-text">.00</span>-->
-              </div>
-              <div *ngIf="(itemPrice.touched || baManageFormItem.submitted) && itemPrice.errors?.required"
-                   class="validErr">
-                Price is required
-              </div>
+          <!--<div class="row" *ngIf="!item.packageOnly">-->
+            <!--<div class="col-md-4 mb-3">-->
+              <!--<label class="form-label" for="validationTooltip03"-->
+              <!--&gt;Discount type</label-->
+              <!--&gt;-->
+              <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
+                 <!--data-bs-toggle="tooltip" title="Select discount type" data-bs-original-title=""-->
+                 <!--aria-label="Item price"><i class="fi-help"></i>-->
+              <!--</a>-->
+              <!--<select-->
+                <!--class="form-select"-->
+                <!--id="validationTooltip03"-->
+                <!--[(ngModel)]="item.itemPackage.discountType" #itemDiscountType="ngModel" name="itemDiscountType"-->
+              <!--&gt;-->
+                <!--<option value="None">None</option>-->
+                <!--<option value="Cash">Cash</option>-->
+                <!--<option value="Percentage">Percentage</option>-->
+              <!--</select>-->
+              <!--<div-->
+                <!--*ngIf="(itemDiscountType.touched || baManageFormItem.submitted) && itemDiscountType.errors?.required"-->
+                <!--class="validErr">-->
+                <!--Discount type is required-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-4 mb-3" *ngIf="item.itemPackage.discountType!=='None'">-->
+              <!--<label class="form-label" for="validationTooltip04"-->
+              <!--&gt;Discount</label-->
+              <!--&gt;-->
+              <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
+                 <!--data-bs-toggle="tooltip" title="Item discount" data-bs-original-title="Item discount"-->
+                 <!--aria-label="Item discount"><i class="fi-help"></i>-->
+              <!--</a>-->
+              <!--<input-->
+                <!--class="form-control"-->
+                <!--type="number"-->
+                <!--id="validationTooltip04"-->
+                <!--placeholder="Discount"-->
+                <!--required-->
+                <!--[(ngModel)]="item.itemPackage.discount" #itemDiscount="ngModel" name="itemDiscount"-->
+              <!--/>-->
+              <!--<div *ngIf="(itemDiscount.touched || baManageFormItem.submitted) && itemDiscount.errors?.required"-->
+                   <!--class="validErr">-->
+                <!--Discount is required-->
+              <!--</div>-->
+              <!--&lt;!&ndash;<div class="valid-tooltip">Looks good!</div>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class="col-md-4 mb-3">-->
+              <!--<label class="form-label" for="validationTooltip02"-->
+              <!--&gt;Price (LKR)</label-->
+              <!--&gt;-->
+              <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
+                 <!--data-bs-toggle="tooltip" title="" data-bs-original-title="Item price" aria-label="Item price"><i-->
+                <!--class="fi-help"></i>-->
+              <!--</a>-->
+              <!--&lt;!&ndash; <input-->
+                <!--class="form-control"-->
+                <!--type="text"-->
+                <!--id="validationTooltip02"-->
+                <!--placeholder="Price"-->
+                <!--value=""-->
+                <!--required-->
+              <!--/> &ndash;&gt;-->
+              <!--<div class="input-group">-->
+                <!--<span class="input-group-text fs-lg py-1">LKR</span>-->
+                <!--<input type="number" class="form-control" placeholder="Amount"-->
+                       <!--required [(ngModel)]="item.itemPackage.price" #itemPrice="ngModel" name="itemPrice">-->
+                <!--&lt;!&ndash;<span class="input-group-text">.00</span>&ndash;&gt;-->
+              <!--</div>-->
+              <!--<div *ngIf="(itemPrice.touched || baManageFormItem.submitted) && itemPrice.errors?.required"-->
+                   <!--class="validErr">-->
+                <!--Price is required-->
+              <!--</div>-->
 
-            </div>
-          </div>
+            <!--</div>-->
+          <!--</div>-->
           <div class="row">
             <div class="col-md-12 mb-3">
               <label class="form-label"
